--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,25 @@
     transition: all 0.4s ease-in-out;
     font-family: "Poppins", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+/* Container */
+#pixel-sketch-container{
+    padding: 15px;
+    display: flex;   
+    justify-content: center; 
+    gap: 50px;
+    flex-wrap: wrap;    
+}
+
+/* Setting Panel */
+#setting-panel{
+    display: inline-block;    
+}
+
+#size-control{
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+}
 
 /* Sketch Pad Area */
 
@@ -15,23 +34,16 @@
     border: 2px solid black;
     width: 500px;
     height: 500px;
-    display: flex;    
-    margin: 10px auto;
+    display: flex;        
     flex-direction: column;
 }
 
 .pixel-pad-row{
     display: flex;
-    flex: 1;
-    border: 2px solid purple;    
+    flex: 1;    
 }
 
-.pixel-pad-row:nth-child(odd){
-    border: 2px solid orange;
-}
-
-.pixel-pad{
-    background-color: blue;
-    border: 2px solid black;
+.pixel-pad{    
+    border: 1px solid rgba(0, 0, 0, 0.3);
     flex: 1;
 }
