--- a/src/styles.css
+++ b/src/styles.css
@@ -8,29 +8,62 @@
     transition: all 0.4s ease-in-out;
     font-family: "Poppins", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+:root{
+    --primary-color: #c87fdd;
+    --secondary-color: #922eb1;
+    --tertiary-color: #e5e5e5;
+}
+
+body{
+    background-color: rgba(200, 127, 221, 0.1);    
+}
+/* header */
+header{
+    text-align: center;
+    color: var(--secondary-color);
+    padding: 15px;
+}
+
 /* Container */
 #pixel-sketch-container{
     padding: 15px;
     display: flex;   
     justify-content: center; 
     gap: 50px;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;        
 }
 
 /* Setting Panel */
 #setting-panel{
-    display: inline-block;    
+    display: inline-block;   
+    width: 300px; 
+    border: 5px solid rgba(146, 46, 177, 0.5);
+    border-radius: 15px;
+    overflow: hidden;
 }
 
 #size-control{
     display: flex;
     justify-content: center;    
-    align-items: center;
-    flex-direction: column;
+    /* align-items: center; */
+    flex-direction: column;    
+    height: 100%;
 }
 
+#size-control > div{    
+    display: flex;    
+    justify-content: center;
+    align-items: center;    
+    height: 100%;    
+    border: 1px solid rgba(146, 46, 177, 0.3);
+    padding: 25px;
+    background-color: rgba(200, 127, 221, 0.2);
+}
+
+
 /* Brush Controls */
-#btn-brush-rainbow{
+.active-rainbow-btn{
     background: linear-gradient(to right, 
         #ff9f9f, /* Pastel red */
         #ffcc9f, /* Pastel orange */
@@ -47,6 +80,126 @@
     border-radius: 10px;
 }   
 
+/* brush-control-container */
+#brush-control-container, #size-control-container{
+    flex-direction:column;
+}
+
+#brush-color-value{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    width: 50px;
+    height: 50px;
+    border: none;
+    cursor: pointer;    
+}
+
+#brush-color-value::-webkit-color-swatch{
+    border-radius: 50%;    
+}
+
+#brush-color-value::-moz-color-swatch{
+    border-radius: 50%;    
+}
+
+/* size-control-container */
+#size-value {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 10px; /* Track height */
+    background: white; /* Track color */
+    border-radius: 5px; /* Rounded corners */
+    outline: none; /* Remove outline */
+    margin: 10px;    
+    border-radius: 16px;
+  }
+
+  #size-value::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px; /* Thumb width */
+    height: 20px; /* Thumb height */
+    background: white; /* Thumb color */
+    border: 3px solid var(--secondary-color);
+    border-radius: 50%; /* Circular thumb */
+    cursor: pointer; /* Pointer cursor */   
+
+  }
+
+  #size-value::-moz-range-thumb {
+    width: 20px; /* Thumb width */
+    height: 20px; /* Thumb height */
+    background: white; /* Thumb color */
+    border: 3px solid var(--secondary-color);
+    border-radius: 50%; /* Circular thumb */
+    cursor: pointer; /* Pointer cursor */    
+  }
+
+  #size-value::-ms-thumb {
+    width: 20px; /* Thumb width */
+    height: 20px; /* Thumb height */
+    background: #922eb1; /* Thumb color */
+    border-radius: 50%; /* Circular thumb */
+    cursor: pointer; /* Pointer cursor */
+  }
+
+  #size-value::-webkit-slider-runnable-track {    
+    border-radius: 5px; /* Rounded corners */
+  }
+
+  #size-value::-moz-range-track {        
+    border-radius: 5px; /* Rounded corners */
+  }
+
+  #size-value::-ms-track {       
+    border-radius: 5px; /* Rounded corners */
+    height: 10px; /* Track height */
+    border: none; /* Remove border */
+  }
+
+  #size-value::-webkit-slider-thumb:hover {
+    box-shadow: 0 0 0 10px rgba(146,46,177, .1)
+  }
+  #size-value:active::-webkit-slider-thumb {
+    box-shadow: 0 0 0 13px rgba(146,46,177, .2)
+  }
+  #size-value:focus::-webkit-slider-thumb {
+    box-shadow: 0 0 0 13px rgba(146,46,177, .2)
+  }
+
+/* Remove Color Controls */
+#remove-color-control-container{
+    flex-direction: row;
+}
+
+.btn{
+    border: none;
+    padding: 5px 20px;
+    margin: 5px 15px;
+    background-color: white;
+    border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.btn:hover{
+    color: white;
+    background-color: var(--primary-color);
+    border: 2px solid white;
+}
+
+.active-btn{
+    background-color: var(--primary-color);
+    color: white;
+    background-color: var(--primary-color);
+    border: 2px solid white;
+}
+
 /* Sketch Pad Area */
 
 #sketch-pad{
@@ -55,6 +208,7 @@
     height: 500px;
     display: flex;        
     flex-direction: column;
+    
 }
 
 .pixel-pad-row{
@@ -63,6 +217,6 @@
 }
 
 .pixel-pad{    
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px dashed rgba(0, 0, 0, 0.1);
     flex: 1;
 }
