--- a/src/styles.css
+++ b/src/styles.css
@@ -175,7 +175,7 @@ header{
     flex-direction: row;
 }
 
-.btn{
+.btn, .btn-toggle{
     border: none;
     padding: 5px 20px;
     margin: 5px 15px;
@@ -187,10 +187,15 @@ header{
     font-size: 15px;
 }
 
-.btn:hover{
+.btn:hover, .btn-toggle:hover{
     color: white;
     background-color: var(--primary-color);
     border: 2px solid white;
+    text-shadow: 
+    -1px -1px 0px rgba(0, 0, 0, 0.3),  
+     1px -1px 0px rgba(0, 0, 0, 0.3),
+    -1px  1px 0px rgba(0, 0, 0, 0.3),
+     1px  1px 0px rgba(0, 0, 0, 0.3);
 }
 
 .active-btn{
