--- a/src/styles.css
+++ b/src/styles.css
@@ -23,22 +23,29 @@ header{
     text-align: center;
     color: var(--secondary-color);
     padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+
+header i{
+    align-self: self-end;
 }
 
 /* Container */
 #pixel-sketch-container{
     padding: 15px;
     display: flex;   
-    justify-content: center; 
-    align-items: center;
+    justify-content: center;     
     gap: 50px;
-    flex-wrap: wrap;        
+    flex-wrap: wrap;          
 }
 
 /* Setting Panel */
 #setting-panel{
-    display: inline-block;   
-    width: 300px; 
+    display: inline-block;     
+    width: 300px;     
     border: 5px solid rgba(146, 46, 177, 0.5);
     border-radius: 15px;
     overflow: hidden;    
@@ -46,8 +53,7 @@ header{
 
 #size-control{
     display: flex;
-    justify-content: center;    
-    /* align-items: center; */
+    justify-content: center;        
     flex-direction: column;    
     height: 100%;
 }
@@ -57,8 +63,7 @@ header{
     justify-content: center;
     align-items: center;    
     height: 100%;    
-    border: 1px solid rgba(146, 46, 177, 0.3);
-    padding: 25px;
+    border: 1px solid rgba(146, 46, 177, 0.3);    
     background-color: rgba(200, 127, 221, 0.2);
 }
 
@@ -66,6 +71,22 @@ header{
     margin: 0px auto;
     width: 100%;
     border: none;
+}
+
+#btn-hide-container{
+    padding: 0px;
+}
+
+#show-setting-btn{
+    transform: scale(0);
+    position: absolute;
+    top: 0;
+    left: 0; 
+    width: 100px;        
+}
+
+#show-setting-btn:hover{
+    opacity: 1;
 }
 
 /* Drawing Functionality Control */
@@ -98,7 +119,7 @@ header{
 
 /* brush-control-container */
 #brush-control-container, #size-control-container{
-    flex-direction:column;
+    flex-direction:column;    
 }
 
 #brush-color-value{
@@ -200,10 +221,10 @@ header{
     color: var(--secondary-color);
     border-radius: 5px;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 15px;    
 }
 
-.btn:hover, .btn-toggle:hover{
+.btn:hover, .btn-toggle:hover{    
     color: white;
     background-color: var(--primary-color);
     border: 2px solid white;
@@ -258,7 +279,7 @@ header{
     justify-content: center;
     align-items: center;
     transform: scale(0);
-    transform-origin: top;
+    transform-origin: top;    
 }
 
 #shortcut-overview{
